noinst_LIBRARIES = libzzip.a

libzzip_a_SOURCES = dir.cpp err.cpp fetch.cpp file.cpp fseeko.cpp info.cpp \
plugin.cpp stat.cpp zip.cpp 

noinst_HEADERS =  zzip_autoconf.h zzip_conf.h zzip__config.h zzip___debug.h \
zzip___dirent.h zzip_fetch.h zzip_file.h zzip___fnmatch.h zzip_format.h \
zzip_fseeko.h zzip.h zzip___hints.h zzip_info.h zzip_lib.h zzip___mmap.h \
zzip__msvc.h zzip_plugin.h zzip_stdint.h zzip_types.h

INCLUDES = -I$(top_srcdir)/src/compression/zziplib
